WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
43183
Web Inspector: Crash on refresh with a comment selected in the Elements panel
https://bugs.webkit.org/show_bug.cgi?id=43183
Summary
Web Inspector: Crash on refresh with a comment selected in the Elements panel
Alexander Pavlov (apavlov)
Reported
2010-07-29 02:24:03 PDT
1) Open the following HTML file: <!-- 111 --> 2) Bring up the WebInspector and select the comment "111" in the Elements panel. 3) Refresh the inspected page by hitting Ctrl-R in the inspector a couple times. A crash occurs.
Attachments
[PATCH] Suggested solution
(1.95 KB, patch)
2010-07-29 03:01 PDT
,
Alexander Pavlov (apavlov)
no flags
Details
Formatted Diff
Diff
[PATCH] A more bulletproof fix. Returns 0 instead of the document element if the node path is empty
(1.92 KB, patch)
2010-07-29 03:11 PDT
,
Alexander Pavlov (apavlov)
pfeldman
: review+
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Alexander Pavlov (apavlov)
Comment 1
2010-07-29 03:01:22 PDT
Created
attachment 62932
[details]
[PATCH] Suggested solution
Alexander Pavlov (apavlov)
Comment 2
2010-07-29 03:01:49 PDT
Upstreamed issue
http://code.google.com/p/chromium/issues/detail?id=50207
Alexander Pavlov (apavlov)
Comment 3
2010-07-29 03:11:04 PDT
Created
attachment 62933
[details]
[PATCH] A more bulletproof fix. Returns 0 instead of the document element if the node path is empty
Alexander Pavlov (apavlov)
Comment 4
2010-07-29 03:11:48 PDT
Also
http://code.google.com/p/chromium/issues/detail?id=49550
in Chromium bugs
Alexander Pavlov (apavlov)
Comment 5
2010-07-30 01:44:54 PDT
Committing to
http://svn.webkit.org/repository/webkit/trunk
... M WebCore/ChangeLog M WebCore/inspector/InspectorDOMAgent.cpp M WebCore/inspector/front-end/ElementsPanel.js Committed
r64341
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug