2010-07-29  Alexander Pavlov  <apavlov@chromium.org>

Reviewed by Pavel Feldman.

        Web Inspector: Crash on refresh with a comment selected in the Elements panel
        https://bugs.webkit.org/show_bug.cgi?id=43183

        * inspector/InspectorDOMAgent.cpp:
        (WebCore::InspectorDOMAgent::nodeForPath):
        * inspector/front-end/ElementsPanel.js:
        (WebInspector.ElementsPanel.prototype.reset):


Canonical link: https://commits.webkit.org/55164@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@64341 268f45cc-cd09-0410-ab3c-d52691b4dbfc